--- a/web/app-source/www/index.html
+++ b/web/app-source/www/index.html
@@ -43,8 +43,8 @@
 
     <script src="http://localhost:4000/assets/bower_components/socket.io-client/socket.io.js"></script>
 
-
-
+    <!-- domlight-->
+    <script src="http://localhost:4000/assets/node_modules/domlight/domlight.js"></script> 
 
     <script src="http://localhost:4000/assets/canvas-socket-connection.js"></script>
     <!-- SOCKET -->
