--- a/web/app-source/www/index.html
+++ b/web/app-source/www/index.html
@@ -31,22 +31,22 @@
     <!-- SOCKET -->
     <!-- SOCKET -->
     <!-- jquery, lodash -->
-    <script src="http://localhost:4000/assets/bower_components/jquery/dist/jquery.js"></script>
-    <script src="http://localhost:4000/assets/bower_components/lodash/lodash.js"></script>
+    <script src="http://54.149.44.181:4000/assets/bower_components/jquery/dist/jquery.js"></script>
+    <script src="http://54.149.44.181:4000/assets/bower_components/lodash/lodash.js"></script>
 
 
     <!-- contextmenu -->
-    <link rel="stylesheet" type="text/css" href="http://localhost:4000/assets/bower_components/jQuery-contextMenu/src/jquery.contextMenu.css">
-    <script src="http://localhost:4000/assets/bower_components/jQuery-contextMenu/src/jquery.ui.position.js"></script>
-    <script src="http://localhost:4000/assets/bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://54.149.44.181:4000/assets/bower_components/jQuery-contextMenu/src/jquery.contextMenu.css">
+    <script src="http://54.149.44.181:4000/assets/bower_components/jQuery-contextMenu/src/jquery.ui.position.js"></script>
+    <script src="http://54.149.44.181:4000/assets/bower_components/jQuery-contextMenu/src/jquery.contextMenu.js"></script>
 
 
-    <script src="http://localhost:4000/assets/bower_components/socket.io-client/socket.io.js"></script>
+    <script src="http://54.149.44.181:4000/assets/bower_components/socket.io-client/socket.io.js"></script>
 
     <!-- domlight-->
-    <script src="http://localhost:4000/assets/node_modules/domlight/domlight.js"></script> 
+    <script src="http://54.149.44.181:4000/assets/node_modules/domlight/domlight.js"></script> 
 
-    <script src="http://localhost:4000/assets/canvas-socket-connection.js"></script>
+    <script src="http://54.149.44.181:4000/assets/canvas-socket-connection.js"></script>
     <!-- SOCKET -->
     <!-- SOCKET -->
     <!-- SOCKET -->
