removed hard coded url

--- a/_sub-applications/brackets/brackets-dist/index.html
+++ b/_sub-applications/brackets/brackets-dist/index.html
@@ -62,7 +62,7 @@
     <script src="dependencies.js"></script>
 
     <!-- SOCKET CONNECT -->
-    <script src="http://localhost:4000/assets/brackets-socket-connection.js"></script>
+    <script src="http://54.149.44.181:4000/assets/brackets-socket-connection.js"></script>
 
 </body>
 </html>
